objects/box__BoxSign__c.object
<CustomObject>
    <description>BoxSign object</description>
    <fields>
        <fullName>box__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Box Signs</relationshipLabel>
        <relationshipName>BoxSigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>box__BoxSign_url__c</fullName>
        <label>Open in Box Sign</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>box__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BoxSigns</relationshipLabel>
        <relationshipName>BoxSigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>box__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>BoxSigns</relationshipLabel>
        <relationshipName>BoxSigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>box__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>BoxSigns</relationshipLabel>
        <relationshipName>BoxSigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>box__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BoxSigns</relationshipLabel>
        <relationshipName>BoxSigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>box__Status__c</fullName>
        <description>Status of the document</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Uuid__c</fullName>
        <label>Uuid</label>
        <type>TextArea</type>
    </fields>
    <label>Box Sign</label>
    <listViews>
        <fullName>box__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Signs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>